--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh_CN">
   <head>
     <meta charset="UTF-8">
-    <title>Docsify-Guide</title>
+    <title>PIKAQIANG_DOC</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="description" content="Description">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"> <!-- 设置浏览器图标 -->
@@ -18,12 +18,6 @@
     </div>
     <script>
         var num = 0;
-        mermaid.initialize({ startOnLoad: false });
-        await mermaid.run({
-          querySelector: '.someOtherClass',
-          suppressErrors: true,
-          
-        });
         window.$docsify = {
             // 项目名称
             name: 'PIKAQIANG_DOC',
@@ -57,19 +51,6 @@
             //    hideOtherSidebarContent: false,
             //    namespace: 'PIKAQIANG_DOC',
             //}
-            markdown: {
-              smartypants: true, 
-              renderer: {
-                code: function(code, lang) {
-                  if (lang === "mermaid") {
-                    return (
-                      '<div class="mermaid">' + mermaid.render('mermaid-svg-' + num++, code) + "</div>"
-                    );
-                  }
-                  return this.origin.code.apply(this, arguments);
-                }
-              }
-            }
           }
     </script> <!-- docsify的js依赖 -->
     <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script> <!-- emoji表情支持 -->
