--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!doctype html>
-<html lang="zh_CN">
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <title>PIKAQIANG_DOC</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="description" content="Description">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"> <!-- 设置浏览器图标 -->
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"> <!-- 默认主题 -->
+    <link rel="icon" href="./icon.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="./icon_min.png" type="image/x-icon"> <!-- 默认主题 -->
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/lib/themes/vue.css">
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.css">
+    <!--<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.css">-->
   </head>
   <body>
     <!-- 定义加载时候的动作 -->
@@ -17,7 +17,6 @@
       Loading...
     </div>
     <script>
-        var num = 0;
         window.$docsify = {
             // 项目名称
             name: 'PIKAQIANG_DOC',
@@ -59,6 +58,6 @@
     <script src="//cdn.jsdelivr.net/npm/docsify-copy-code/dist/docsify-copy-code.min.js"></script> <!--更多语法高亮-->
     <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-bash.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-php.min.js"></script> <!-- mermaid支持 -->
-    <script src="//cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
+    <!--<script src="//cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>-->
   </body>
 </html>
